# AutoDrive-IROS-2024

./: .devcontainer.json  CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  entrypoint.sh  frames.gv  package.xml
config/: actuator.yaml  robot_localization.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/autodrive_iros_2024/lib/autodrive_iros_2024/: ackermann_odometry  frame_republisher  hello
install/autodrive_iros_2024/share/autodrive_iros_2024/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autodrive_iros_2024/share/autodrive_iros_2024/cmake/: autodrive_iros_2024Config.cmake
install/autodrive_iros_2024/share/autodrive_iros_2024/config/: robot_localization.yaml  slam_toolbox.yaml
install/autodrive_iros_2024/share/autodrive_iros_2024/launch/: launch.py  test_bed.py
launch/: launch.py  launch_prod.py  test_bed.py  test_bed.xml  test_bed.yaml
log/: latest_build
scripts/: build.sh  data_collector.py
src/: ackermann_odometry.cpp  actuator_control.cpp  frame_republisher.cpp  friction_test.cpp  hello.cpp  imu_to_euler_node.cpp  map_transform_node copy.cpp  map_transform_node.cpp  sensor_republisher.cpp  simple_driver.cpp  trajectory_follower.cpp
src/actuator_control/: speed_controller.cpp  steer_controller.cpp
